# pyspark-delta-template

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/dev/: config.yaml
configs/prod/: config.yaml
src/pyspark_delta_template/: __init__.py
src/pyspark_delta_template/config/: loader.py
src/pyspark_delta_template/data/: reader.py  writer.py
src/pyspark_delta_template/processors/: base.py  example.py
src/pyspark_delta_template/utils/: logging_config.py  spark_utils.py
